feat(lang-textmate): merge upstream of tm4e update
Update taken from https://github.com/eclipse/tm4e/commit/5fdd7de889877ad9aea47b22feca9166138bd6a2